Bug fix
Specs table not showing up

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ nav{
     top: 70%;
     left: 50%;
     overflow: hidden;
+    opacity: 0;
 }
 
 .stats{
